# aisafetyeventsandtraining

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/aisafetyeventsandtraining/: __init__.py  main.py  pipeline.py
